# wowVPN

./: .gitignore  Cargo.toml  README.md  README_RU.md  add_nodes.py  backfill_sub_token.py  check_all.py  check_api.py  check_api_clients_last.py  check_api_sub.py  check_both_dbs.py  check_db.py  check_logs.py  check_logs2.py  check_lsof.py  check_nl_again.py  check_nl_speed.py  check_remote_db.py  check_remote_db2.py  check_service.py  check_sub_token.py  check_sub_token2.py  compile_finland.py  create_push_nodes.py  create_push_nodes2.py  deploy_admin.sh  deploy_main.py  diagnose_servers.py  find_db.py  fix_correct_db.py  fix_ee.py  fix_finland.py  fix_mtu.py  fix_nl_rebuild.py  fix_servers.py  fix_servers2.py  fix_sub_token.py  fix_sub_tokens.py  force_rebuild_nl.py  install_paramiko.py  (+15 more)
GUIDE/: 01_SETUP_SERVER.md  02_TESTING_RUSSIA.md  03_ADMIN_PANEL.md
aivpn-android-core/: Cargo.toml
aivpn-client/: Cargo.toml
aivpn-common/: Cargo.toml
aivpn-macos/: AivpnApp.swift  ConnectionKey.swift  ContentView.swift  Info.plist  LocalizationManager.swift  VPNManager.swift  build.sh
aivpn-server/: Cargo.toml
aivpn-server/src/: gateway.rs  lib.rs  main.rs  nat.rs  neural.rs  quic_bridge.rs  server.rs  session.rs  tls_bridge.rs
figmadesighn/: fix.py  fix2.py  index.html  package-lock.json  package.json  translate.py  translate2.py
releases/: RELEASE_NOTES.md  aivpn-macos.dmg
shadevpn-admin-backend/: auto_deploy.py  check_core.py  check_online.py  database.py  deploy.sh  fix_db.py  get_logs.py  get_rust_help.py  main.py  read_json.py  requirements.txt  run_fix.py  (+8 more)
(+91 files in other folders)
